<resources>
    <string name="app_name">Sentriii</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_correo">Correo o Teléfono</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="btn_registrarse">Registrate</string>
    <string name="volver_login">Volver al inicio de sesión</string>
    <string name="sentri_logo_desc">Logo de Sentri</string>
    <string name="hint_telefono">Teléfono</string>

</resources>